--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,5 +17,5 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - ./redis_data:/data  # <-- persists data
+      - ./redis_data:/data  # persists data
     command: ["redis-server", "--appendonly", "yes"]  # enable AOF persistence
